<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="horizontal" >

    
        <ScrollView
            android:id="@+id/scrollView1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <LinearLayout
		        android:layout_width="wrap_content"
		        android:layout_height="match_parent"
		        android:orientation="vertical" >

		        <TextView
		            android:id="@+id/textView1"
		            android:layout_width="wrap_content"
		            android:layout_height="wrap_content"
		            android:text="@string/N0"
		            android:textAppearance="?android:attr/textAppearanceLarge" />
		
		        <TextView
		            android:id="@+id/textView2"
		            android:layout_width="wrap_content"
		            android:layout_height="wrap_content"
		            android:text="@string/N1"
		            android:textAppearance="?android:attr/textAppearanceLarge" />
		
		        <TextView
		            android:id="@+id/textView3"
		            android:layout_width="wrap_content"
		            android:layout_height="wrap_content"
		            android:text="@string/N2"
		            android:textAppearance="?android:attr/textAppearanceLarge" />
		        
		        <TextView
		            android:id="@+id/textView4"
		            android:layout_width="wrap_content"
		            android:layout_height="wrap_content"
		            android:text="@string/N3"
		            android:textAppearance="?android:attr/textAppearanceLarge" />
		        
		        <TextView
		            android:id="@+id/textView5"
		            android:layout_width="wrap_content"
		            android:layout_height="wrap_content"
		            android:text="@string/N4"
		            android:textAppearance="?android:attr/textAppearanceLarge" />
		        
		        <TextView
		            android:id="@+id/textView6"
		            android:layout_width="wrap_content"
		            android:layout_height="wrap_content"
		            android:text="@string/N5"
		            android:textAppearance="?android:attr/textAppearanceLarge" />
		        
		        <TextView
		            android:id="@+id/textView7"
		            android:layout_width="wrap_content"
		            android:layout_height="wrap_content"
		            android:text="@string/N6"
		            android:textAppearance="?android:attr/textAppearanceLarge" />
		        
		        <TextView
		            android:id="@+id/textView8"
		            android:layout_width="wrap_content"
		            android:layout_height="wrap_content"
		            android:text="@string/N7"
		            android:textAppearance="?android:attr/textAppearanceLarge" />
		
		        <TextView
		            android:id="@+id/textView9"
		            android:layout_width="wrap_content"
		            android:layout_height="wrap_content"
		            android:text="@string/N8"
		            android:textAppearance="?android:attr/textAppearanceLarge" />
		
		        <TextView
		            android:id="@+id/textView10"
		            android:layout_width="wrap_content"
		            android:layout_height="wrap_content"
		            android:text="@string/N9"
		            android:textAppearance="?android:attr/textAppearanceLarge" />
		        
		        <TextView
		            android:id="@+id/textView11"
		            android:layout_width="wrap_content"
		            android:layout_height="wrap_content"
		            android:text="@string/N11"
		            android:textAppearance="?android:attr/textAppearanceLarge" />
		        
        	</LinearLayout>

        </ScrollView>
        
</LinearLayout>
